--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!-- Replace default favicon with custom SVG favicon -->
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100' fill='orange'%3E%3Ccircle cx='50' cy='50' r='45' fill='none' stroke='orange' stroke-width='2'/%3E%3Crect x='20' y='20' width='25' height='60' fill='orange' opacity='0.8'/%3E%3Crect x='55' y='35' width='25' height='45' fill='orange' opacity='0.6'/%3E%3Crect x='37.5' y='10' width='25' height='70' fill='orange' opacity='0.9'/%3E%3Ccircle cx='32.5' cy='15' r='3' fill='white'/%3E%3Ccircle cx='67.5' cy='30' r='3' fill='white'/%3E%3Ccircle cx='50' cy='5' r='3' fill='white'/%3E%3C/svg%3E">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Typix Assessment Platform</title>
